// Copyright 2022 labring. All rights reserved.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package enginerpc;

service Enginerpc {
    rpc DirectoryAddEntry(EngineRequest) returns (EngineResponse) {}
    rpc DirectoryDeleteEntry(EngineRequest) returns (EngineResponse) {}
}

//engine request
message EngineRequest {
    string parentdir = 1;
    string filename = 2;
}

//engine response
message EngineResponse {
    uint32 status = 1;
}